karl package Changelog
======================

- Added an arc2box option to just refresh box authentication. We'll
  create a cron job to run this weekly to keep the auth token alive.

4.38.5 (2017-08-03)
===================

- Removed catalog-search logging, which had a bug that broke wiki/atom.xml.

- Removed dependency on j1m.relstoragejsonsearch

- removed search-instance configuration.

4.38.4 (2017-07-28)
===================

- Fixed: pgevolve didn't work with new or very old databases.

- Cleanup some database artifacts that were no-longer needed.

- Added a trigger to remove karkex records when packing.

4.38.3 (2017-07-26)
===================

(not released to prod)

- Bring back the static assets needed for PDC.

4.38.2 (2017-07-22)
===================

- Fixed a bug introduced in 4.38.1 that broke profile recent-items search.

4.38.1 (2017-07-14)
===================

- Changed queries that use community id to use the new
  karlex.community_id column because it's updated more reliably.

- Fixed gsa_sync to handle None values.

4.38.0 (2017-07-13)
===================

Use sso_id instead of email address for SSO

4.37.3 (2017-07-08)
===================

- Below water line: Add a Newt auxiliary table to hold and index community id.

4.37.2 (2017-06-20)
===================

Fix community indexing some more by using Newt DB 0.8, which:

- Updates the Newt Database on object id order and

- Uses upsert, so records aren't deleted during update.

4.37.1 (2017-06-06)
===================

It's a no-no to have indxes based on functions that do queries and we
ran into trouble with get_community_zoid.  The index wasn't reflecting
changes.

This release provides a database evolution that:

- Adds a trigger that pupulates object records with community ids when
  they're written.

- Forces updates of existing records to get the trigger applied.

- Replaces get_community_zoid with a function that uses the stored
  data and replaces the index that used it.
